--- a/.github/workflows/clang-format.yml
+++ b/.github/workflows/clang-format.yml
@@ -14,6 +14,7 @@ jobs:
       run: sudo apt-get install clang-format
 
     - name: Run clang-format
+      shell: bash
       run: |
         shopt -s globstar  # Bashの拡張グロブを有効にします
         clang-format -i **/xxx*.c  # 規則性のあるCファイルに対して適用
