--- a/.github/workflows/clang-format.yml
+++ b/.github/workflows/clang-format.yml
@@ -10,23 +10,17 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Load environment variables from .env
-      run: |
-        ls -la
-        if [ -f .env ]; then
-          echo "Loading environment variables from .env file"
-          source .env
-        fi
-      shell: bash
-
     - name: Install clang-format
       run: sudo apt-get install clang-format
 
     - name: Run clang-format
       run: |
-        find . -name "question*.c" | xargs clang-format -i
+        find . -name "xxx*.c" | xargs clang-format -i
 
     - name: Commit changes if any
+      env:
+        GIT_USER_NAME: ${{ secrets.GIT_USER_NAME }}
+        GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}
       run: |
         if ! git diff --quiet; then
           git config --global user.name "$GIT_USER_NAME"
@@ -35,6 +29,4 @@ jobs:
           git commit -m "Apply clang-format changes"
           git push
         fi
-      env:
-        GIT_USER_NAME: ${{ secrets.GIT_USER_NAME }}
-        GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}
+      shell: bash
