ci: テスト対象ファイルを変更する

--- a/.github/workflows/clang-format.yml
+++ b/.github/workflows/clang-format.yml
@@ -15,7 +15,7 @@ jobs:
 
     - name: Run clang-format
       run: |
-        find . -name "xxx*.c" | xargs clang-format -i
+        find . -name "question*.c" | xargs clang-format -i
 
     - name: Commit changes if any
       env:
